# dice

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
build_msvc/: dice.sln
build_msvc/dice/: dice.vcxproj  dice.vcxproj.filters
build_msvc/dice_cli/: dice_cli.vcxproj
build_msvc/linenoise/: linenoise.vcxproj  linenoise.vcxproj.filters
build_msvc/tests/: tests.vcxproj  tests.vcxproj.filters
doc/html/: annotated.html  calculator_8hpp_source.html  classdice_1_1base__value-members.html  classdice_1_1base__value.html  classdice_1_1base__value__inherit__graph.map  classdice_1_1base__value__inherit__graph.md5  classdice_1_1bernoulli__tag.html  classdice_1_1compiler__error-members.html  classdice_1_1compiler__error.html  classdice_1_1compiler__error__coll__graph.map  classdice_1_1compiler__error__coll__graph.md5  classdice_1_1compiler__error__inherit__graph.md5  classdice_1_1constant__tag.html  classdice_1_1conversion__visitor-members.html  classdice_1_1conversion__visitor.html  classdice_1_1conversion__visitor__coll__graph.map  classdice_1_1conversion__visitor__coll__graph.md5  classdice_1_1conversion__visitor__inherit__graph.md5  classdice_1_1conversions-members.html  classdice_1_1conversions.html  classdice_1_1decomposition-members.html  classdice_1_1decomposition.html  classdice_1_1decomposition__iterator-members.html  classdice_1_1decomposition__iterator.html  classdice_1_1decomposition__visitor-members.html  classdice_1_1decomposition__visitor.html  classdice_1_1decomposition__visitor__coll__graph.map  classdice_1_1decomposition__visitor__coll__graph.md5  classdice_1_1decomposition__visitor__inherit__graph.md5  classdice_1_1dependencies__visitor-members.html  classdice_1_1dependencies__visitor.html  classdice_1_1dependencies__visitor__coll__graph.md5  classdice_1_1dependencies__visitor__inherit__graph.map  classdice_1_1dependencies__visitor__inherit__graph.md5  classdice_1_1direct__interpreter-members.html  classdice_1_1direct__interpreter.html  classdice_1_1environment-members.html  classdice_1_1environment.html  classdice_1_1execution__context-members.html  classdice_1_1execution__context.html  (+169 more)
doc/latex/: annotated.tex  classdice_1_1base__value.tex  classdice_1_1base__value__inherit__graph.md5  classdice_1_1bernoulli__tag.tex  classdice_1_1compiler__error.tex  classdice_1_1compiler__error__coll__graph.md5  classdice_1_1compiler__error__inherit__graph.md5  (+61 more)
examples/: advantage.dice  advantage.dice.out  functions.dice  functions.dice.out  nested.dice  nested.dice.out  simple.dice  simple.dice.out  statistics.dice  statistics.dice.out
src/: calculator.cpp  calculator.hpp  checked.hpp  conversions.cpp  conversions.hpp  decomposition.hpp  direct_interpreter.hpp  environment.cpp  environment.hpp  errors.cpp  errors.hpp  functions.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  logger.cpp  logger.hpp  main.cpp  parser.cpp  parser.hpp  random_variable.hpp  random_variable_decomposition.hpp  safe.hpp  symbols.cpp  symbols.hpp  utils.hpp  value.hpp
test/: checked_test.cpp  conversions_test.cpp  decomposition_test.cpp  environment_test.cpp  integration_test.cpp  lexer_test.cpp  logger_mock.hpp  parser_test.cpp  random_variable_decomposition_test.cpp  random_variable_test.cpp  utils_test.cpp  value_test.cpp
(+59 files in other folders)
